# Parasite.Configuration

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSources.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
Include/Parasite/: Configuration.hh
Include/Parasite/Configuration/: Macros.hh  Platform.hh  Version.hh.in
